[gd_scene load_steps=22 format=3 uid="uid://egfw8x6vm44d"]

[ext_resource type="PackedScene" uid="uid://bg86ff6lnnk5s" path="res://Escenas/sensor.tscn" id="1_u5m37"]
[ext_resource type="Script" path="res://Scripts/oscuro.gd" id="1_wm8n6"]
[ext_resource type="Texture2D" uid="uid://i4k8h28sqbgr" path="res://Sprites/Final/DARK_animation.png" id="3_8d2vx"]
[ext_resource type="Texture2D" uid="uid://fnprqk1j2p2f" path="res://Sprites/Dwarf/Area-oscuro.png" id="4_7fl37"]
[ext_resource type="Shader" path="res://Shaders/trabajador.gdshader" id="5_lyb78"]
[ext_resource type="Texture2D" uid="uid://ddaq1fkr8ld8n" path="res://Sprites/Alma.png" id="6_awdml"]

[sub_resource type="BoxShape3D" id="BoxShape3D_w8b4w"]

[sub_resource type="Animation" id="Animation_l55uh"]
resource_name = "Atacar"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28, 29, 30]
}

[sub_resource type="Animation" id="Animation_dsspr"]
resource_name = "Destruir"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28, 29, 30]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"picar"
}]
}

[sub_resource type="Animation" id="Animation_xisp1"]
resource_name = "Idle"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_hph1t"]
resource_name = "Morir"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [72, 73, 74, 75, 76, 77, 78, 79, 80, 81]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"eliminarme"
}]
}

[sub_resource type="Animation" id="Animation_mc1cr"]
resource_name = "Move"
length = 0.44
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.11, 0.22, 0.33),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_altes"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_lk4tj"]
resource_name = "Nacer"
length = 1.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"enablePlay"
}]
}

[sub_resource type="Animation" id="Animation_ih53u"]
resource_name = "Spawn"
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [96, 97, 98, 99, 100, 101, 102, 103, 104, 105, 106, 107, 108, 109, 110, 111, 112, 113, 114, 115, 116, 117, 118, 119, 119]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(2.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"enablePlay"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_knegi"]
_data = {
"Atacar": SubResource("Animation_l55uh"),
"Destruir": SubResource("Animation_dsspr"),
"Idle": SubResource("Animation_xisp1"),
"Morir": SubResource("Animation_hph1t"),
"Move": SubResource("Animation_mc1cr"),
"Nacer": SubResource("Animation_lk4tj"),
"RESET": SubResource("Animation_altes"),
"Spawn": SubResource("Animation_ih53u")
}

[sub_resource type="Animation" id="Animation_mploj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_usmea"]
resource_name = "vibe"
length = 0.88
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.11, 0.22, 0.33, 0.44, 0.55, 0.66, 0.77),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bhtlj"]
_data = {
"RESET": SubResource("Animation_mploj"),
"vibe": SubResource("Animation_usmea")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_yo7gr"]
shader = ExtResource("5_lyb78")
shader_parameter/new_colour = Color(1, 1, 1, 1)

[sub_resource type="ViewportTexture" id="ViewportTexture_vcljk"]
viewport_path = NodePath("SubViewport")

[node name="Oscuro" type="CharacterBody3D" groups=["Oscuro"]]
collision_layer = 32
collision_mask = 0
script = ExtResource("1_wm8n6")

[node name="SensorTrabajador" parent="." instance=ExtResource("1_u5m37")]
collision_layer = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(0.3, 0, 0, 0, -2.18557e-09, -0.3, 0, 0.05, -1.31134e-08, -0.03, -0.04, 0)
shape = SubResource("BoxShape3D_w8b4w")

[node name="Sprite" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.34202, 0.939693, 0, -0.939693, 0.34202, 0, 0, 0)
sorting_offset = 2.0
texture = ExtResource("3_8d2vx")
hframes = 24
vframes = 5
frame = 1

[node name="SensorMineral" parent="." instance=ExtResource("1_u5m37")]
collision_layer = 0
collision_mask = 2

[node name="SensorNave" parent="." instance=ExtResource("1_u5m37")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1, 0)
collision_layer = 0
collision_mask = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_knegi")
}

[node name="Influencia" type="Sprite3D" parent="."]
transform = Transform3D(3.6, 0, 0, 0, -1.57361e-07, -3.6, 0, 3.6, -1.57361e-07, 0, -0.1, 0)
sorting_offset = -3.0
texture = ExtResource("4_7fl37")

[node name="SensorIluminado" parent="." instance=ExtResource("1_u5m37")]
collision_layer = 0
collision_mask = 64

[node name="SubViewport" type="SubViewport" parent="."]
transparent_bg = true
size = Vector2i(120, 120)
render_target_update_mode = 4

[node name="AnimationSoul" type="AnimationPlayer" parent="SubViewport"]
libraries = {
"": SubResource("AnimationLibrary_bhtlj")
}

[node name="Sprite2D" type="Sprite2D" parent="SubViewport"]
material = SubResource("ShaderMaterial_yo7gr")
position = Vector2(60, 64)
texture = ExtResource("6_awdml")
hframes = 8
frame = 1

[node name="IndicadorAlma" type="Sprite3D" parent="."]
transform = Transform3D(0.15, 0, 0, 0, 0.051303, 0.140954, 0, -0.140954, 0.051303, -0.0055652, 0.0858345, -0.201157)
texture = SubResource("ViewportTexture_vcljk")
